auth fixed, add pagination for each crud

--- a/frontend/src/app/components/cabinet/cabinet.component.html
+++ b/frontend/src/app/components/cabinet/cabinet.component.html
@@ -4,7 +4,7 @@
   <mat-card class="flex flex-col items-center p-4">
     <mat-icon color="warn">logout</mat-icon>
     <p class="text-lg font-bold mt-2">Вийти з аккаунту</p>
-    <button mat-raised-button color="warn">Вийти</button>
+    <button mat-raised-button color="warn" (click)="logout()">Вийти</button>
   </mat-card>
 
   <mat-card class="flex flex-col items-center p-4">
