--- a/frontend/src/app/components/create-user/create-user.component.html
+++ b/frontend/src/app/components/create-user/create-user.component.html
@@ -34,7 +34,7 @@
     </mat-error>
   </mat-form-field>
 
-  <mat-form-field class="w-[300px] self-center" appearance="fill">
+  <mat-form-field *ngIf="!isEditMode" class="w-[300px] self-center" appearance="fill">
     <mat-label>Пароль</mat-label>
     <input matInput formControlName="password" type="password" required>
     <mat-error *ngIf="form.get('password')?.hasError('required')">
@@ -45,7 +45,7 @@
     </mat-error>
   </mat-form-field>
 
-  <div class="dialog-actions self-center">
+  <div class="w-[100%] flex justify-center gap-2">
     <button mat-button type="button" (click)="onCancel()">Скасувати</button>
     <button mat-flat-button color="primary" type="submit">
       {{ isEditMode ? 'Зберегти' : 'Створити' }}
