--- a/frontend/src/app/components/create-order/create-order.component.html
+++ b/frontend/src/app/components/create-order/create-order.component.html
@@ -14,7 +14,7 @@
   <div class="self-center"> Продукт:  {{product.name}}</div>
   <div class="self-center"> Загальна ціна  {{form.get('price')?.value }}</div>
 
-  <div class="self-center">
+  <div class="w-[100%] flex justify-center gap-2">
     <button mat-button type="button" (click)="onCancel()">Скасувати</button>
     <button mat-flat-button color="primary" type="submit">Створити</button>
   </div>
