--- a/frontend/src/app/components/orders/orders.component.html
+++ b/frontend/src/app/components/orders/orders.component.html
@@ -51,6 +51,7 @@
   </table>
 
   <mat-paginator
+    [length]="totalSize"
     [pageSize]="paginationParams.size"
     [pageSizeOptions]="[5, 10, 20]"
     (page)="onPageChange($event)">
