--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -57,7 +57,7 @@
   </table>
 
   <mat-paginator
-    [length]=""
+    [length]="totalProductCount"
     [pageSize]="paginationParams.size"
     [pageSizeOptions]="[5, 10, 20]"
     (page)="onPageChange($event)">
