--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -49,6 +49,7 @@
   </table>
 
   <mat-paginator
+    [length]="userCount"
     [pageSize]="paginationParams.size"
     [pageSizeOptions]="[5, 10, 20]"
     (page)="onPageChange($event)">
