--- a/frontend/src/app/components/cabinet/cabinet.component.html
+++ b/frontend/src/app/components/cabinet/cabinet.component.html
@@ -6,34 +6,35 @@
     <p class="text-lg font-bold mt-2">Вийти з аккаунту</p>
     <button mat-raised-button color="warn" (click)="logout()">Вийти</button>
   </mat-card>
+  <ng-container *ngIf="userData?.role === roles.Admin">
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="primary">bakery_dining</mat-icon>
+      <p class="text-lg font-bold mt-2">Звіт за кожним виробом</p>
+      <button mat-raised-button color="primary" (click)="downloadProductReport()">Завантажити</button>
+    </mat-card>
 
-  <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
-    <mat-icon color="primary">bakery_dining</mat-icon>
-    <p class="text-lg font-bold mt-2">Звіт за кожним виробом</p>
-    <button mat-raised-button color="primary" (click)="downloadProductReport()">Завантажити</button>
-  </mat-card>
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="primary">person</mat-icon>
+      <p class="text-lg font-bold mt-2">Звіт за кожним замовником</p>
+      <button mat-raised-button color="primary" (click)="downloadCustomerReport()">Завантажити</button>
+    </mat-card>
 
-  <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
-    <mat-icon color="primary">person</mat-icon>
-    <p class="text-lg font-bold mt-2">Звіт за кожним замовником</p>
-    <button mat-raised-button color="primary" (click)="downloadCustomerReport()">Завантажити</button>
-  </mat-card>
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="accent">receipt_long</mat-icon>
+      <p class="text-lg font-bold mt-2">Звіт по замовленням</p>
+      <button mat-raised-button color="accent" (click)="downloadAllOrdersReport()">Завантажити</button>
+    </mat-card>
 
-  <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
-    <mat-icon color="accent">receipt_long</mat-icon>
-    <p class="text-lg font-bold mt-2">Звіт по замовленням</p>
-    <button mat-raised-button color="accent" (click)="downloadAllOrdersReport()">Завантажити</button>
-  </mat-card>
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="accent">trending_up</mat-icon>
+      <p class="text-lg font-bold mt-2">Динаміка замовлень по замовникам за 30 днів</p>
+      <button mat-raised-button color="accent"  (click)="downloadOrderTrendsByCustomer()">Завантажити</button>
+    </mat-card>
 
-  <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
-    <mat-icon color="accent">trending_up</mat-icon>
-    <p class="text-lg font-bold mt-2">Динаміка замовлень (замовники)</p>
-    <button mat-raised-button color="accent"  (click)="downloadOrderTrendsByCustomer()">Завантажити</button>
-  </mat-card>
-
-  <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
-    <mat-icon color="accent">show_chart</mat-icon>
-    <p class="text-lg font-bold mt-2">Динаміка замовлень (вироби)</p>
-    <button mat-raised-button color="accent" (click)="downloadOrderTrendsByProduct()">Завантажити</button>
-  </mat-card>
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="accent">show_chart</mat-icon>
+      <p class="text-lg font-bold mt-2">Динаміка замовлень по товарам за 30 днів</p>
+      <button mat-raised-button color="accent" (click)="downloadOrderTrendsByProduct()">Завантажити</button>
+    </mat-card>
+  </ng-container>
 </div>
