--- a/frontend/src/app/components/cabinet/cabinet.component.html
+++ b/frontend/src/app/components/cabinet/cabinet.component.html
@@ -1,39 +1,40 @@
 <h2 class="text-center mt-5"> Кабінет користувача </h2>
 
-<div class="grid grid-cols-3 gap-4 m-5">
-  <mat-card class="flex flex-col items-center p-4">
+<div class="flex h-auto w-[80%] justify-center items-start flex-wrap gap-4 m-auto">
+  <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
     <mat-icon color="warn">logout</mat-icon>
     <p class="text-lg font-bold mt-2">Вийти з аккаунту</p>
-    <button mat-raised-button color="warn">Вийти</button>
+    <button mat-raised-button color="warn" (click)="logout()">Вийти</button>
   </mat-card>
+  <ng-container *ngIf="userData?.role === roles.Admin">
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="primary">bakery_dining</mat-icon>
+      <p class="text-lg font-bold mt-2">Звіт за кожним виробом</p>
+      <button mat-raised-button color="primary" (click)="downloadProductReport()">Завантажити</button>
+    </mat-card>
 
-  <mat-card class="flex flex-col items-center p-4">
-    <mat-icon color="primary">bakery_dining</mat-icon>
-    <p class="text-lg font-bold mt-2">Звіт за кожним виробом</p>
-    <button mat-raised-button color="primary">Завантажити</button>
-  </mat-card>
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="primary">person</mat-icon>
+      <p class="text-lg font-bold mt-2">Звіт за кожним замовником</p>
+      <button mat-raised-button color="primary" (click)="downloadCustomerReport()">Завантажити</button>
+    </mat-card>
 
-  <mat-card class="flex flex-col items-center p-4">
-    <mat-icon color="primary">person</mat-icon>
-    <p class="text-lg font-bold mt-2">Звіт за кожним замовником</p>
-    <button mat-raised-button color="primary">Завантажити</button>
-  </mat-card>
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="accent">receipt_long</mat-icon>
+      <p class="text-lg font-bold mt-2">Звіт по замовленням</p>
+      <button mat-raised-button color="accent" (click)="downloadAllOrdersReport()">Завантажити</button>
+    </mat-card>
 
-  <mat-card class="flex flex-col items-center p-4">
-    <mat-icon color="accent">receipt_long</mat-icon>
-    <p class="text-lg font-bold mt-2">Звіт по замовленням</p>
-    <button mat-raised-button color="accent">Завантажити</button>
-  </mat-card>
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="accent">trending_up</mat-icon>
+      <p class="text-lg font-bold mt-2">Динаміка замовлень по замовникам за 30 днів</p>
+      <button mat-raised-button color="accent"  (click)="downloadOrderTrendsByCustomer()">Завантажити</button>
+    </mat-card>
 
-  <mat-card class="flex flex-col items-center p-4">
-    <mat-icon color="accent">trending_up</mat-icon>
-    <p class="text-lg font-bold mt-2">Динаміка замовлень (замовники)</p>
-    <button mat-raised-button color="accent">Завантажити</button>
-  </mat-card>
-
-  <mat-card class="flex flex-col items-center p-4">
-    <mat-icon color="accent">show_chart</mat-icon>
-    <p class="text-lg font-bold mt-2">Динаміка замовлень (вироби)</p>
-    <button mat-raised-button color="accent">Завантажити</button>
-  </mat-card>
+    <mat-card class="flex min-w-[325px] max-h-[150px] flex-col items-center p-4">
+      <mat-icon color="accent">show_chart</mat-icon>
+      <p class="text-lg font-bold mt-2">Динаміка замовлень по товарам за 30 днів</p>
+      <button mat-raised-button color="accent" (click)="downloadOrderTrendsByProduct()">Завантажити</button>
+    </mat-card>
+  </ng-container>
 </div>
