--- a/frontend/src/app/components/create-product/create-product.component.html
+++ b/frontend/src/app/components/create-product/create-product.component.html
@@ -22,16 +22,16 @@
 
   <mat-form-field class="w-[300px] self-center" appearance="fill">
     <mat-label>Кількість</mat-label>
-    <input matInput formControlName="count" type="number" required>
-    <mat-error *ngIf="form.get('count')?.hasError('required')">
+    <input matInput formControlName="productCount" type="number" required>
+    <mat-error *ngIf="form.get('productCount')?.hasError('required')">
       Вкажіть кількість продукту.
     </mat-error>
-    <mat-error *ngIf="form.get('count')?.hasError('min')">
+    <mat-error *ngIf="form.get('productCount')?.hasError('min')">
       Кількість повинна бути не меншою за 1.
     </mat-error>
   </mat-form-field>
 
-  <div class="dialog-actions self-center">
+  <div class="w-[100%] flex justify-center gap-2">
     <button mat-button type="button" (click)="onCancel()">Скасувати</button>
     <button mat-flat-button color="primary" type="submit">{{ isEditMode ? 'Зберегти' : 'Створити' }}</button>
   </div>
